crates/core/tests/snapshots/corpus__context-meter.snap
---
source: crates/core/tests/corpus.rs
expression: replay(&fixture)
---
--- request ---
{
  "model": "claude-sonnet-5",
  "instructions": "You are Claude Code.",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Continue."
        }
      ]
    }
  ],
  "reasoning": {
    "summary": "auto"
  },
  "include": [
    "reasoning.encrypted_content"
  ],
  "parallel_tool_calls": true,
  "store": false,
  "stream": true,
  "prompt_cache_key": "fixture-context-meter"
}

--- frames ---
{"type":"message_start","message":{"id":"msg_context-meter","type":"message","role":"assistant","model":"claude-sonnet-5","content":[],"stop_reason":null,"stop_sequence":null,"usage":{"input_tokens":100,"output_tokens":0,"cache_creation_input_tokens":0,"cache_read_input_tokens":0}}}
{"type":"content_block_start","index":0,"content_block":{"type":"text","text":""}}
{"type":"content_block_delta","index":0,"delta":{"type":"text_delta","text":"Continuing."}}
{"type":"content_block_stop","index":0}
{"type":"message_delta","delta":{"stop_reason":"end_turn","stop_sequence":null},"usage":{"input_tokens":500,"output_tokens":40,"cache_creation_input_tokens":0,"cache_read_input_tokens":11500}}
{"type":"message_stop"}
