crates/core/tests/snapshots/corpus__count-tokens.snap
---
source: crates/core/tests/corpus.rs
expression: replay(&fixture)
---
--- request ---
{
  "model": "claude-sonnet-5",
  "instructions": "You are Claude Code.",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "How many tokens is this conversation?"
        }
      ]
    },
    {
      "type": "message",
      "role": "assistant",
      "content": [
        {
          "type": "output_text",
          "text": "Let me check."
        }
      ]
    },
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Thanks."
        }
      ]
    }
  ],
  "tools": [
    {
      "type": "function",
      "name": "Read",
      "description": "Read a file",
      "strict": false,
      "parameters": {
        "properties": {
          "file_path": {
            "type": "string"
          }
        },
        "required": [
          "file_path"
        ],
        "type": "object"
      }
    }
  ],
  "reasoning": {
    "summary": "auto"
  },
  "include": [
    "reasoning.encrypted_content"
  ],
  "parallel_tool_calls": true,
  "store": false,
  "stream": true,
  "prompt_cache_key": "fixture-count-tokens"
}

--- frames ---
