crates/core/tests/snapshots/corpus__tool-calling.snap
---
source: crates/core/tests/corpus.rs
expression: replay(&fixture)
---
--- request ---
{
  "model": "claude-sonnet-5",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Read both files."
        }
      ]
    },
    {
      "type": "message",
      "role": "assistant",
      "content": [
        {
          "type": "output_text",
          "text": "Reading both."
        }
      ]
    },
    {
      "type": "function_call",
      "call_id": "toolu_a",
      "name": "Read",
      "arguments": "{\"file_path\":\"/tmp/a\"}"
    },
    {
      "type": "function_call",
      "call_id": "toolu_b",
      "name": "Read",
      "arguments": "{\"file_path\":\"/tmp/b\"}"
    },
    {
      "type": "function_call_output",
      "call_id": "toolu_a",
      "output": "contents of a"
    },
    {
      "type": "function_call_output",
      "call_id": "toolu_b",
      "output": "contents of b"
    }
  ],
  "tools": [
    {
      "type": "function",
      "name": "Read",
      "description": "Read a file",
      "strict": false,
      "parameters": {
        "properties": {
          "file_path": {
            "type": "string"
          }
        },
        "required": [
          "file_path"
        ],
        "type": "object"
      }
    }
  ],
  "tool_choice": "auto",
  "reasoning": {
    "summary": "auto"
  },
  "include": [
    "reasoning.encrypted_content"
  ],
  "parallel_tool_calls": true,
  "store": false,
  "stream": true,
  "prompt_cache_key": "fixture-tool-calling"
}

--- frames ---
{"type":"message_start","message":{"id":"msg_tool-calling","type":"message","role":"assistant","model":"claude-sonnet-5","content":[],"stop_reason":null,"stop_sequence":null,"usage":{"input_tokens":100,"output_tokens":0,"cache_creation_input_tokens":0,"cache_read_input_tokens":0}}}
{"type":"content_block_start","index":0,"content_block":{"type":"thinking","thinking":""}}
{"type":"content_block_delta","index":0,"delta":{"type":"thinking_delta","thinking":"Both files are read."}}
{"type":"content_block_stop","index":0}
{"type":"content_block_start","index":1,"content_block":{"type":"text","text":""}}
{"type":"content_block_delta","index":1,"delta":{"type":"text_delta","text":"Both files are now read."}}
{"type":"content_block_stop","index":1}
{"type":"message_delta","delta":{"stop_reason":"end_turn","stop_sequence":null},"usage":{"input_tokens":200,"output_tokens":18,"cache_creation_input_tokens":0,"cache_read_input_tokens":600}}
{"type":"message_stop"}
