crates/core/tests/snapshots/corpus__tool-search.snap
---
source: crates/core/tests/corpus.rs
expression: replay(&fixture)
---
--- request ---
{
  "model": "claude-sonnet-5",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Find a tool for sending messages."
        }
      ]
    },
    {
      "type": "function_call",
      "call_id": "toolu_search_1",
      "name": "ToolSearch",
      "arguments": "{\"query\":\"send message\"}"
    },
    {
      "type": "function_call_output",
      "call_id": "toolu_search_1",
      "output": "{\"available_tools\":[\"SendMessage\",\"ListChannels\"]}"
    },
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Use SendMessage to send the text `ready`. Call the tool; do not describe it."
        }
      ]
    }
  ],
  "tools": [
    {
      "type": "function",
      "name": "ToolSearch",
      "description": "Search for tools",
      "strict": false,
      "parameters": {
        "properties": {
          "query": {
            "type": "string"
          }
        },
        "type": "object"
      }
    },
    {
      "type": "function",
      "name": "SendMessage",
      "description": "Send a message",
      "strict": false,
      "parameters": {
        "properties": {
          "text": {
            "type": "string"
          }
        },
        "type": "object"
      }
    },
    {
      "type": "function",
      "name": "ListChannels",
      "description": "List channels",
      "strict": false,
      "parameters": {
        "properties": {},
        "type": "object"
      }
    }
  ],
  "reasoning": {
    "summary": "auto"
  },
  "include": [
    "reasoning.encrypted_content"
  ],
  "parallel_tool_calls": true,
  "store": false,
  "stream": true,
  "prompt_cache_key": "fixture-tool-search"
}

--- frames ---
{"type":"message_start","message":{"id":"msg_tool-search","type":"message","role":"assistant","model":"claude-sonnet-5","content":[],"stop_reason":null,"stop_sequence":null,"usage":{"input_tokens":100,"output_tokens":0,"cache_creation_input_tokens":0,"cache_read_input_tokens":0}}}
{"type":"content_block_start","index":0,"content_block":{"type":"tool_use","id":"call_send_1","name":"SendMessage","input":{}}}
{"type":"content_block_delta","index":0,"delta":{"type":"input_json_delta","partial_json":"{\"text\":\"hello\"}"}}
{"type":"content_block_stop","index":0}
{"type":"message_delta","delta":{"stop_reason":"tool_use","stop_sequence":null},"usage":{"input_tokens":400,"output_tokens":15,"cache_creation_input_tokens":0,"cache_read_input_tokens":300}}
{"type":"message_stop"}
