crates/core/tests/snapshots/corpus__web-fetch.snap
---
source: crates/core/tests/corpus.rs
expression: replay(&fixture)
---
--- request ---
{
  "model": "claude-3-5-haiku-20241022",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Summarize this page content:\n\nThe deployment key is L9WQ2T and rotates monthly."
        }
      ]
    }
  ],
  "reasoning": {
    "summary": "auto"
  },
  "include": [
    "reasoning.encrypted_content"
  ],
  "parallel_tool_calls": true,
  "store": false,
  "stream": true,
  "prompt_cache_key": "fixture-web-fetch"
}

--- frames ---
{"type":"message_start","message":{"id":"msg_web-fetch","type":"message","role":"assistant","model":"claude-3-5-haiku-20241022","content":[],"stop_reason":null,"stop_sequence":null,"usage":{"input_tokens":100,"output_tokens":0,"cache_creation_input_tokens":0,"cache_read_input_tokens":0}}}
{"type":"content_block_start","index":0,"content_block":{"type":"text","text":""}}
{"type":"content_block_delta","index":0,"delta":{"type":"text_delta","text":"The page states the deployment key L9WQ2T rotates monthly."}}
{"type":"content_block_stop","index":0}
{"type":"message_delta","delta":{"stop_reason":"end_turn","stop_sequence":null},"usage":{"input_tokens":60,"output_tokens":12,"cache_creation_input_tokens":0,"cache_read_input_tokens":0}}
{"type":"message_stop"}
