crates/core/tests/snapshots/corpus__web-search.snap
---
source: crates/core/tests/corpus.rs
expression: replay(&fixture)
---
--- request ---
{
  "model": "claude-sonnet-4",
  "instructions": "You are an assistant with access to web search.",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Search for the SSE specification."
        }
      ]
    }
  ],
  "tools": [
    {
      "type": "web_search",
      "external_web_access": true,
      "indexed_web_access": true
    }
  ],
  "reasoning": {
    "summary": "auto"
  },
  "include": [
    "reasoning.encrypted_content"
  ],
  "parallel_tool_calls": true,
  "store": false,
  "stream": true,
  "prompt_cache_key": "fixture-web-search"
}

--- frames ---
{"type":"message_start","message":{"id":"msg_web-search","type":"message","role":"assistant","model":"claude-sonnet-4","content":[],"stop_reason":null,"stop_sequence":null,"usage":{"input_tokens":100,"output_tokens":0,"cache_creation_input_tokens":0,"cache_read_input_tokens":0}}}
{"type":"content_block_start","index":0,"content_block":{"type":"text","text":""}}
{"type":"content_block_delta","index":0,"delta":{"type":"text_delta","text":"The specification defines "}}
{"type":"content_block_delta","index":0,"delta":{"type":"text_delta","text":"the data field."}}
{"type":"content_block_stop","index":0}
{"type":"content_block_start","index":1,"content_block":{"type":"server_tool_use","id":"ws_search_1","name":"web_search","input":{"query":"server-sent events specification"}}}
{"type":"content_block_stop","index":1}
{"type":"content_block_start","index":2,"content_block":{"type":"web_search_tool_result","tool_use_id":"ws_search_1","content":[{"type":"web_search_result","url":"https://example.invalid/sse-spec","title":"Server-Sent Events"}]}}
{"type":"content_block_stop","index":2}
{"type":"message_delta","delta":{"stop_reason":"end_turn","stop_sequence":null},"usage":{"input_tokens":400,"output_tokens":20,"cache_creation_input_tokens":0,"cache_read_input_tokens":500}}
{"type":"message_stop"}
